<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">
    <RelativeLayout
        android:id="@+id/home_top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent">
        <RelativeLayout
            android:id="@+id/top_navi_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_btn_height"
            android:layout_alignParentTop="true">
            <TextView
                android:layout_width="@dimen/top_menu_height"
                android:layout_height="@dimen/top_menu_height"
                android:layout_marginLeft="@dimen/top_menu_margin"
                android:layout_centerVertical="true"
                android:background="@mipmap/icon_menu"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="@dimen/top_menu_height"
                android:layout_height="@dimen/top_menu_height"
                android:layout_marginRight="@dimen/top_menu_margin"
                android:layout_centerVertical="true"
                android:background="@mipmap/icon_search"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_btn_height"
            android:layout_below="@id/top_navi_layout"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/top_btn_live"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_btn_height"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/home_top_btn_styles"
                    android:text="@string/top_bar_live_text"
                    android:drawableLeft="@mipmap/icon_live"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/top_btn_play"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_btn_height"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/home_top_btn_styles"
                    android:text="@string/top_bar_play_text"
                    android:drawableLeft="@mipmap/icon_play"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_btn_height"
                android:id="@+id/top_btn_spin"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/home_top_btn_styles"
                    android:text="@string/top_bar_spin_text"
                    android:drawableLeft="@mipmap/icon_spin"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_bottom_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/home_bottom_btn_shop"
            style="@style/home_bottom_btn_styles"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/home_bottom_btn_profile"
            android:drawableTop="@mipmap/icon_shop"
            android:text="@string/bottom_btn_shop_text"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/home_bottom_btn_profile"
            style="@style/home_bottom_btn_styles"
            app:layout_constraintLeft_toRightOf="@id/home_bottom_btn_shop"
            app:layout_constraintRight_toLeftOf="@id/home_bottom_btn_cart"
            android:drawableTop="@mipmap/icon_profile"
            android:text="@string/bottom_btn_profile_text"/>
        <TextView
            android:id="@+id/home_bottom_btn_cart"
            style="@style/home_bottom_btn_styles"
            app:layout_constraintLeft_toRightOf="@id/home_bottom_btn_profile"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@mipmap/icon_cart"
            android:text="@string/bottom_btn_cart_text"/>
    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_top_bar_layout"
        android:layout_above="@id/home_bottom_bar_layout"
        android:padding="@dimen/content_padding">
        <RelativeLayout
            android:id="@+id/product_bose_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bose_layout_height">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/bose_layout_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@mipmap/headphones"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/real_live_margin"
                android:layout_marginLeft="@dimen/real_live_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@mipmap/real_time_live"
                android:adjustViewBounds="true"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/bose_bottom_bar_height"
                android:layout_alignParentBottom="true"
                android:background="@color/lightBlack">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/live_top_bar_margin"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/bose_title_text_size"
                    android:text="@string/product_bose_text"/>
                <ImageView
                    android:id="@+id/product_share_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/live_top_bar_margin"
                    android:src="@mipmap/icon_share"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/product_share_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/live_top_bar_margin"
                    android:src="@mipmap/icon_fav_selected"/>
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/product_bose_layout"
            android:layout_marginTop="@dimen/content_padding">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/jewellery"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/real_live_margin"
                    android:layout_marginLeft="@dimen/real_live_margin"
                    android:background="@color/lightBlack"
                    android:text="@string/product_live_time_1"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/content_padding">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/apparel"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/real_live_margin"
                    android:layout_marginLeft="@dimen/real_live_margin"
                    android:background="@color/lightBlack"
                    android:text="@string/product_live_time_2"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
