<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/live_room_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <FrameLayout
        android:id="@+id/remote_video_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/remote_product_video_big"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/live_product_big_view_margin">
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_top_bar_height"
        android:layout_marginLeft="@dimen/live_top_bar_margin"
        android:layout_marginRight="@dimen/live_top_bar_margin">
        <Button
            android:id="@+id/live_back_btn"
            android:layout_width="@dimen/live_back_btn_size"
            android:layout_height="@dimen/live_back_btn_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_back_arrow"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/real_time_live"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
            <ImageView
                android:layout_width="@dimen/live_follow_btn_image_size"
                android:layout_height="@dimen/live_follow_btn_image_size"
                android:src="@mipmap/icon_follow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textAlignment="gravity"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:text="@string/live_follow_btn_text"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_chat_layout_height"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/chat_background">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/live_chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_chat_message_list_height"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/live_bottom_bar_margin"
            android:layout_marginRight="@dimen/live_bottom_bar_margin">
        </android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/chat_bottom_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/live_bottom_bar_margin"
            android:layout_marginRight="@dimen/live_bottom_bar_margin"
            android:layout_marginBottom="@dimen/live_bottom_bar_margin"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/live_chat_recycler_view">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/product_message_btn"
                android:layout_marginRight="@dimen/live_bottom_edit_margin"
                android:background="@drawable/edit_text_background"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/live_bottom_edit_padding_horizontal"
                android:paddingRight="@dimen/live_bottom_edit_padding_horizontal"
                android:paddingTop="@dimen/live_bottom_edit_padding_vertical"
                android:paddingBottom="@dimen/live_bottom_edit_padding_vertical">
                <EditText
                    android:id="@+id/live_chat_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@android:color/transparent"
                    android:lines="1"/>
            </RelativeLayout>

            <Button
                android:id="@+id/product_noti_btn"
                style="@style/live_bottom_btn_style"
                android:layout_alignParentRight="true"
                android:background="@mipmap/icon_notifications"/>
            <Button
                android:id="@+id/product_share_btn"
                style="@style/live_bottom_btn_style"
                android:layout_toLeftOf="@id/product_noti_btn"
                android:background="@mipmap/icon_share"/>
            <Button
                android:id="@+id/product_cart_btn"
                style="@style/live_bottom_btn_style"
                android:layout_toLeftOf="@id/product_share_btn"
                android:background="@mipmap/icon_cart_small"/>
            <Button
                android:id="@+id/product_message_btn"
                style="@style/live_bottom_btn_style"
                android:layout_toLeftOf="@id/product_cart_btn"
                android:background="@mipmap/icon_message"/>
        </RelativeLayout>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/product_dialog_layout"
        android:layout_width="@dimen/live_product_layout_width"
        android:layout_height="@dimen/live_product_layout_height"
        android:padding="@dimen/live_product_layout_padding"
        android:layout_centerInParent="true"
        android:layout_above="@id/quiz_dialog_layout"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone">
        <FrameLayout
            android:id="@+id/product_video_small"
            android:layout_width="@dimen/live_product_icon_width"
            android:layout_height="@dimen/live_product_icon_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </FrameLayout>
        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/product_video_small"
            app:layout_constraintTop_toTopOf="parent"
            android:maxWidth="220dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/product_variant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/product_title"
            app:layout_constraintLeft_toLeftOf="@id/product_title"
            app:layout_constraintLeft_toRightOf="@id/product_video_small"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/live_product_small_text"/>
        <TextView
            android:id="@+id/product_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/product_title"
            app:layout_constraintLeft_toRightOf="@id/product_video_small"
            app:layout_constraintTop_toBottomOf="@id/product_variant"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/live_product_small_text"/>
        <TextView
            android:id="@+id/original_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/product_title"
            app:layout_constraintLeft_toRightOf="@id/product_video_small"
            app:layout_constraintTop_toBottomOf="@id/product_detail"
            app:layout_constraintBottom_toTopOf="@id/original_price_value"
            android:layout_marginTop="10dp"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/live_product_small_text"
            android:text="@string/product_dialog_original_price_title"/>
        <TextView
            android:id="@+id/original_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/product_title"
            app:layout_constraintLeft_toRightOf="@id/product_video_small"
            app:layout_constraintTop_toBottomOf="@id/original_price_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/lightBlue"/>
        <Button
            android:id="@+id/btn_buy_now"
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:background="@mipmap/btn_buynow"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="6dp"
            app:layout_constraintLeft_toRightOf="@id/original_price_title"
            app:layout_constraintTop_toBottomOf="@id/product_detail"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/group_deal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toRightOf="@id/btn_buy_now"
            app:layout_constraintTop_toBottomOf="@id/product_detail"
            app:layout_constraintBottom_toTopOf="@id/group_deal_value"
            android:textSize="@dimen/live_product_small_text"
            android:textColor="@android:color/white"
            android:text="@string/product_dialog_group_deal_title"/>
        <TextView
            android:id="@+id/group_deal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/group_deal_title"
            app:layout_constraintLeft_toRightOf="@id/btn_buy_now"
            app:layout_constraintTop_toBottomOf="@id/group_deal_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@android:color/white"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="6dp"
            app:layout_constraintLeft_toRightOf="@id/group_deal_title"
            app:layout_constraintTop_toBottomOf="@id/product_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@mipmap/btn_add_cart"/>
    </android.support.constraint.ConstraintLayout>
    <FrameLayout
        android:id="@+id/quiz_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/quiz_layout_margin_horizontal"
        android:layout_marginRight="@dimen/quiz_layout_margin_horizontal"
        android:layout_marginBottom="@dimen/quiz_layout_margin_bottom"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/quiz_dialog_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/quiz_dialog_bg"
            android:paddingTop="@dimen/quiz_layout_padding"
            android:paddingBottom="@dimen/quiz_layout_padding">
            <ImageView
                android:id="@+id/quiz_close_btn"
                android:layout_width="@dimen/quiz_close_size"
                android:layout_height="@dimen/quiz_close_size"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/quiz_close_margin"
                android:src="@mipmap/icon_close"/>
            <ProgressBar
                android:id="@+id/quiz_progress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:progressDrawable="@drawable/quiz_progress_dialog_ring"/>
            <TextView
                android:id="@+id/quiz_count_text"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/quiz_progress"
                android:layout_alignLeft="@id/quiz_progress"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24dp"
                android:text="00"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quiz_progress"
                android:layout_centerHorizontal="true"
                android:text="@string/quiz_title"
                android:textColor="@android:color/darker_gray"
                android:textSize="28dp"/>
            <TextView
                android:id="@+id/quiz_content"
                android:layout_width="@dimen/quiz_option_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/quiz_title"
                android:layout_marginTop="@dimen/quiz_content_margin"
                android:layout_marginBottom="@dimen/quiz_content_margin"
                android:layout_centerHorizontal="true"
                android:textAlignment="gravity"
                android:gravity="center_horizontal"
                android:textColor="@color/lightBlack"
                android:textSize="18dp"/>
            <LinearLayout
                android:id="@+id/quiz_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/quiz_content"
                android:layout_marginBottom="@dimen/quiz_content_margin">
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>
